# fdbus_demo

simple_server_client/: run_host_server.sh  run_name_server.sh
simple_server_client/_build_install/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  fdbxclient  fdbxserver  host_server  install_manifest.txt  logsvc  logviewer  lsclt  lsdp  lsevt  lshost  lssvc  ntfcenter
simple_server_client/_build_install/install/usr/include/fdbus/: CFdbSimpleSerializer.h  IFdbMsgBuilder.h
simple_server_client/simple_client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  simple_client  simple_client.cpp
simple_server_client/simple_server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  simple_server  simple_server.cpp
